2003-09-15  Jerry James  <james@xemacs.org>

	* syswindows.h: Quiet compiler warnings about struct stat.
	(W32API_VER):
	(W32API_INSTALLED_VER): New macros to compare w32api versions.
	(_SHQUERYRBINFO): Define for w32api < 2.4 only.

2003-09-11  Marcus Crestani  <crestani@informatik.uni-tuebingen.de>

	* alloc.c: Clean up #ifdef USE_KKCC, move stack code to better
	position. Add lrecord_memory_descriptions table.
	(KKCC_GC_STACK_FULL): Replace functions with macros.
	(KKCC_GC_STACK_EMPTY):
	(kkcc_gc_stack_push):
	(kkcc_gc_stack_pop):
	(kkcc_gc_stack_push_lisp_object):
	(mark_object): Add #ifdef to remove unused code.
	(garbage_collect_1): Remove some #ifdefs.
	* dumper.c (pdump): Dump lrecord_memory_descriptions table.
	* lrecord.h: Add lrecord_memory_descriptions.

2003-09-08  Mike Sperber  <mike@xemacs.org>

	* symbols.c (Fvariable_binding_locus): Add, as per suggestion from
	RMS at:
	http://article.gmane.org/gmane.emacs.pretest.bugs/1010

2003-09-03  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.15 "celery" is released.

2003-08-30  Mike Sperber  <mike@xemacs.org>

	* bytecode.c (execute_optimized_program): Remove broken
	special-case code in Bvarset for buffer-local variables, reverting
	previous patch to bytecode.c from 2003-08-18 by Jerry James
	<james@xemacs.org>.

2003-08-28  Jerry James  <james@xemacs.org>

	* emodules.h: Add extern "C" declarations for C++ module builds.
	* lisp.h: Ditto.
	* lrecord.h: Ditto.
	* opaque.h: Ditto.
	* process.h: Ditto.
	* symeval.h: Ditto.
	* text.h: Ditto.
	* mule-canna.c: Make key_buffer char instead of unsigned char.
	* mule-canna.c (storeResults): 1st arg is char *, not unsigned
	char *.
	* mule-canna.c (Fcanna_initialize): Add casts for C++ builds.
	* mule-canna.c (Fcanna_finalize): Ditto.
	* mule-canna.c (Fcanna_touroku_string): Ditto.
	* mule-canna.c (Fcanna_store_yomi): Ditto.
	* mule-canna.c (Fcanna_parse): Ditto.
	* mule-canna.c (Fcanna_query_mode): Ditto, and change buf to