@@ -1,3 +1,10 @@
+2002-07-04  Jonathan Harris  <jonathan@xemacs.org>
+
+	* intl-encap-win32.c:
+	* intl-auto-encap-win32.c:
+	* intl-auto-encap-win32.h:
+	Remove GetLongPathNameW - API not available on Win95/NT4
+
 2003-09-15  Jerry James  <james@xemacs.org>
 
 	* syswindows.h: Quiet compiler warnings about struct stat.
